--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Rey",
   "license": "MIT",
   "scripts": {
-      "start": "node index.js",
-      "dev": "nodemon index.js"
+      "start": "node src/index.js",
+      "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "axios": "^0.21.4",
